--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1 user-scalable=0">
 
-  <title>Mapping Greater Boston's neighborhoods</title>
-  <meta name="description" content="Crowdsources mapping of neighborhoods in Greater Boston" />
+  <title>Mapping SLO's neighborhoods</title>
+  <meta name="description" content="Crowdsources mapping of neighborhoods in SLO" />
 
   <link rel="stylesheet" href="libs/bootstrap/css/bootstrap.min.css" />
   <link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v3/themes/css/cartodb.css" />
@@ -48,7 +48,7 @@
         <h3 id="myModalLabel">Mapping Greater Boston's neighborhoods</h3>
       </div>
              <div class="modal-body">
-        <p> Boston and its surroundings are full of distinctive neighborhoods, but their extents and boundaries are open to interpretation. The goal of this site is to <b>collectively map neighborhoods</b> as an image of the city in maps and words.</p>
+        <p> SLO and its surroundings are full of distinctive neighborhoods, but their extents and boundaries are open to interpretation. The goal of this site is to <b>collectively map neighborhoods</b> as an image of the city in maps and words.</p>
         <p> No neighborhood names or boundaries are here to start with. <b>You make the map</b>. Real or imagined,
                  within a city, or crossing municipal borders. Names, extents, and descriptions are up to you. After mapping, be sure to <b>View Maps</b> to see other people's contributions.</p>
         <p> This is a project by <a href="http://bostonography.com" target="_blank">Bostonography</a> — <a href="http://bostonography.com/2015/map-your-neighborhood-again/" target="_blank">read more about it here!</a></p>
@@ -235,10 +235,7 @@
      <script src="libs/Leaflet.Editable.js"></script>
   <script src="js/names.js"></script>
   <script src="js/hoodscript.js"></script>
-  <script src="js/googleanalytics.js"></script>
-  
 
-   
   </script>
 </body>
 </html>
