--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
     <div class="modal-content">
              <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-        <h3 id="myModalLabel">Mapping Greater Boston's neighborhoods</h3>
+        <h3 id="myModalLabel">Mapping SLO's neighborhoods</h3>
       </div>
              <div class="modal-body">
         <p> SLO and its surroundings are full of distinctive neighborhoods, but their extents and boundaries are open to interpretation. The goal of this site is to <b>collectively map neighborhoods</b> as an image of the city in maps and words.</p>
         <p> No neighborhood names or boundaries are here to start with. <b>You make the map</b>. Real or imagined,
                  within a city, or crossing municipal borders. Names, extents, and descriptions are up to you. After mapping, be sure to <b>View Maps</b> to see other people's contributions.</p>
-        <p> This is a project by <a href="http://bostonography.com" target="_blank">Bostonography</a> — <a href="http://bostonography.com/2015/map-your-neighborhood-again/" target="_blank">read more about it here!</a></p>
+        <p> This is a project by <a href="http://joelarson.com" target="_blank">Joe Larson</a> — and is still a work in progress!</p>
         <!--p><b>NEW download a shapefile of the data contributed so far, or get the source code!</b> Check the buttons in the bottom right.</p>
         <p> <b>- Thanks!</b> </p-->
       </div>
@@ -207,7 +207,7 @@
 <a id="githubBtn" style="bottom:40px;" class="link-icons enableTooltipsLeft" title="Get it on GitHub">
   <img  class="links glyphicon" style="width:15px;height15px;" src="img/GitHub-Mark-32px.png"/>
 </a>
-<a id="twitterbtn" href="http://twitter.com/bostonography" style="bottom:20px;" class="link-icons enableTooltipsLeft" title="Bostonography on Twitter" target="_blank">
+<a id="twitterbtn" href="http://twitter.com/oeon" style="bottom:20px;" class="link-icons enableTooltipsLeft" title="Joe on Twitter" target="_blank">
   <img  class="links glyphicon" style="width:15px;height15px;" src="img/bird_black_32_0.png"/>
 </a>
      <div id="navDiv" class="navbar navbar-inverse navbar-fixed-top" >
