--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 </div>
 <div  style="" class="linksbackground"></div>
 <a style="bottom:60px;" class="link-icons enableTooltipsLeft" title="Information" href="#aboutModal" data-toggle="modal"><i class="glyphicon glyphicon-info-sign"></i></a>
-<!--a style="bottom:60px;" class="link-icons enableTooltipsLeft download-btn" title="Download Data"  ><i class="glyphicon glyphicon-download-alt"></i></a-->
+<a style="bottom:60px;" class="link-icons enableTooltipsLeft download-btn" title="Download Data"  ><i class="glyphicon glyphicon-download-alt"></i></a>
 <a id="githubBtn" style="bottom:40px;" class="link-icons enableTooltipsLeft" title="Get it on GitHub">
   <img  class="links glyphicon" style="width:15px;height15px;" src="img/GitHub-Mark-32px.png"/>
 </a>
